--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.5.0",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
